# Sipros4

./: .gitignore  README.md
EnsembleScripts/: ClusterSip.py  ConstructDatabase.py  UnlabelForSlurm.sb  cmd.sh  configure_subdb.py  parseconfig.py  protein_update.py  runSiprosFiltering.sh  runSplitDbCfg.sh  separate_scan_folder.py  separate_scans.py  sipros_ensemble_filtering.py  sipros_peptides_assembling.py  sipros_post_module.py  sipros_prepare_protein_database.py  sipros_psm_tabulating.py  split_db.py
V3Scripts/: HierarchicalClustering.py  LabelForSlurm.sb  SIPcmd.sh  parseconfig.py  prorata_pro2ptm.py  sip.py  sipros_peptides_filtering.py  sipros_post_module.py
V3Scripts/inhouse/: ptmzhou.py
V4Scripts/: ClusterSip.py  getLabelPCTinEachFT.R  getSpectraCountInEachFT.R  isobaric.py  makeDBforLabelSearch.R  pro2isobaric.py  pro2ptm.py  refineProteinFDR.R  reverseseq.py  sipros_peptides_assembling.py
V4Scripts/inhouse/: reduceChar.py
configGenerator/: CMakeLists.txt
configGenerator/src/: cfgParser.cpp  cfgParser.h  main.cpp
configGenerator/test/: C13_0Pct.cfg  C13_100000Pct.cfg  C13_10000Pct.cfg  C13_1070Pct.cfg  C13_11000Pct.cfg  C13_12000Pct.cfg  C13_13000Pct.cfg  C13_14000Pct.cfg  C13_15000Pct.cfg  C13_16000Pct.cfg  C13_17000Pct.cfg  C13_18000Pct.cfg  C13_19000Pct.cfg  C13_20000Pct.cfg  C13_2000Pct.cfg  C13_21000Pct.cfg  C13_22000Pct.cfg  C13_23000Pct.cfg  C13_24000Pct.cfg  C13_25000Pct.cfg  C13_26000Pct.cfg  C13_27000Pct.cfg  C13_28000Pct.cfg  C13_29000Pct.cfg  C13_30000Pct.cfg  C13_3000Pct.cfg  C13_31000Pct.cfg  C13_32000Pct.cfg  C13_33000Pct.cfg  C13_34000Pct.cfg  C13_35000Pct.cfg  C13_36000Pct.cfg  C13_37000Pct.cfg  C13_38000Pct.cfg  C13_39000Pct.cfg  C13_40000Pct.cfg  C13_4000Pct.cfg  C13_41000Pct.cfg  C13_42000Pct.cfg  C13_43000Pct.cfg  (+61 more)
configTemplates/: SiprosEnsembleConfig.cfg  SiprosV4Config.cfg
siprosEnsembleCmakeAll/: CMakeLists.txt  make  runMPI.sh
siprosEnsembleCmakeAll/MSToolkit/: CMakeLists.txt
siprosEnsembleCmakeAll/MSToolkit/src/MSToolkit/: mzMLWriter.cpp
siprosEnsembleCmakeAll/MSToolkit/src/mzParser/: mzp_base64.cpp
siprosEnsembleCmakeAll/include/: CometSearchMod.h  MVH.h  SiprosReader.h  isotopologue.h  ms2scan.h  ms2scanvector.h  peptide.h  proNovoConfig.h  proteindatabase.h  tokenvector.h
siprosEnsembleCmakeAll/mpi/: CMakeLists.txt  mpimain.cpp
siprosEnsembleCmakeAll/openmp/: CMakeLists.txt  main.cpp
siprosEnsembleCmakeAll/src/: CometSearchMod.cpp  MVH.cpp  SiprosReader.cpp  isotopologue.cpp  ms2scan.cpp  ms2scanvector.cpp  peptide.cpp  proNovoConfig.cpp  proteindatabase.cpp  ptm.cpp
siprosV3CmakeAll/: CMakeLists.txt
siprosV3CmakeAll/include/: directoryStructure.h  peptide.h  proNovoConfig.h  proteindatabase.h
siprosV3CmakeAll/mpi/: CMakeLists.txt  mpimain.cpp
siprosV3CmakeAll/openmp/: CMakeLists.txt  main.cpp
siprosV3CmakeAll/src/: ms2scan.cpp  peptide.cpp  proteindatabase.cpp  tokenvector.cpp
siprosV3CmakeAll/test/: CMakeLists.txt
siprosV4CmakeAll/: CMakeLists.txt  make
siprosV4CmakeAll/include/: isotopologue.h  ms2scan.h  ms2scanvector.h  peptide.h  ptm.h  ticktock.h
siprosV4CmakeAll/mpi/: CMakeLists.txt
siprosV4CmakeAll/openmp/: CMakeLists.txt
siprosV4CmakeAll/src/: directoryStructure.cpp  isotopologue.cpp  ms2scanvector.cpp  peptide.cpp  proNovoConfig.cpp
siprosV4CmakeAll/test/: CMakeLists.txt  main.cpp
