cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 17)
project(configGenerator LANGUAGES CXX)
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
include_directories(${PROJECT_SOURCE_DIR}/src)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
add_executable(configGenerator ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
target_link_libraries(configGenerator -static)
