add_executable(SiprosV4omp ${SRC_LIST} ${PROJECT_SOURCE_DIR}/openmp/main.cpp)

# target_compile_options(SiprosV4omp PUBLIC -ffast-math -march=native)
target_compile_options(SiprosV4omp PUBLIC -ffast-math)

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    target_link_libraries(SiprosV4omp PUBLIC OpenMP::OpenMP_CXX profiler)
    target_compile_definitions(SiprosV4omp PUBLIC Gper)
else()
    # target_link_libraries(SiprosV4omp PUBLIC OpenMP::OpenMP_CXX)
    # set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    message(CMAKE_CXX_FLAGS: "${CMAKE_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
    message(CMAKE_EXE_LINKER_FLAGS: "${CMAKE_EXE_LINKER_FLAGS}")
    # target_link_libraries(SiprosV4omp PRIVATE OpenMP::OpenMP_CXX -static)
    # target_link_libraries(SiprosV4omp PUBLIC OpenMP::OpenMP_CXX gomp dl -static)
    if(DEFINED Ticktock)
        target_compile_definitions(SiprosV4omp PUBLIC Ticktock)
    endif()
endif()
